feat:타입스크립트 적용

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://spdhsrnvl123.github.io/MEGA-MELON/",
+  "homepage": "https://spdhsrnvl123.github.io/poketmon_dictionary",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +8,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@types/styled-components": "^5.1.34",
     "cross-env": "^7.0.3",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
