--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-        "target" : "ES5",
-        "module" : "CommonJS",
-        "strict" : true,
-        "allowJs" : true,
-        "esModuleInterop": true,
-        "jsx":"react-jsx"
+      "target": "ES5",
+      "module": "CommonJS",
+      "strict": true,
+      "allowJs": true,
+      "esModuleInterop": true,
+      "jsx": "react-jsx",
+      "resolveJsonModule": true
     },
     "include": ["src"]
 }
