refactor:타입스크립트 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,9 @@
       "target": "ES5",
       "module": "CommonJS",
       "strict": true,
-      "allowJs": true,
       "esModuleInterop": true,
       "jsx": "react-jsx",
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
     },
     "include": ["src"]
 }
