--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^22.13.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "cross-env": "^7.0.3",
     "json-server": "^0.17.1",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
