--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
       "esModuleInterop": true,
       "jsx": "react-jsx",
       "resolveJsonModule": true,
+      "noImplicitAny": true,
+      "moduleResolution": "node"
     },
     "include": ["src"]
 }
