--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
+    "apexcharts": "^4.4.0",
     "cross-env": "^7.0.3",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-redux": "^8.1.3",
