--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -25,6 +27,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "swiper": "^11.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
